Removing the overflow: auto fix for client since it breaks site.

--- a/src/auth/styles/client.styl
+++ b/src/auth/styles/client.styl
@@ -1,5 +1,5 @@
 // Client is for some reason setting `overflow: hidden` through an injected stylesheet.
 // I don't know why.
 // Fixes https://github.com/gamejolt/issue-tracker/issues/535
-html, body
-	overflow: auto
+// html, body
+// 	overflow: auto
